--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -80,8 +80,7 @@
 
                 <div class="btnwrap">
                     <a href="../agreement">Sign-up</a>
-                    <input type="submit" id="login_btn" value="Login">
-                    <input name="next" type="hidden" value="{{ request.path }}">
+                    <input type="submit" id="login_btn" value="Login" style="cursor:pointer">
                 </div>
 
 
