--- a/templates/main/sign_up.html
+++ b/templates/main/sign_up.html
@@ -15,12 +15,26 @@
 <body>
     {% block contents %}
     <h1 class="text-center" style="margin: 30px 30px">SELab Sign-up Form</h1>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+                <form>
+                    <label><b>Auth Code:</b></label>
+                    <input class="form-control" placeholder="Your auth code">
+                </form>
+            </div>
+            <div class="col-sm-4"></div>
+        </div>
+
+    </div>
+    <br>
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-2"></div>
-            <div class="col-sm-8">
-                <form style="margin-left:300px; margin-right:300px;" action="" id="signup" method="POST" novalidate>
+            <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+                <form action="" id="signup" method="POST" novalidate>
                     {% csrf_token %}
 
                     <!-- 아이디 -->
@@ -108,6 +122,7 @@
                         </small>
                     </div>
                     <br><br>
+
                     <div>
                         <!--이메일-->
                         <div class="mb-4 md-form">
@@ -133,7 +148,7 @@
                             {% endif %}
                         </div>
 
-                        <br><br>
+                        <br>
                         <!--이름-->
                         <div class="mb-4 md-form">
                             <label name="label_username" for="{{ form.username.id_for_label }}"><i
@@ -157,43 +172,16 @@
                             {% endif %}
                         </div>
 
-                        <br><br>
-                        <!--휴대폰번호-->
-                        <div class="mb-4 md-form">
-                            <label name="label_hp" for="{{ form.hp.id_for_label }}"><i
-                                    class="fas fa-phone"></i>&nbsp;&nbsp;{{ form.hp.label }}</label>
-                            {{ form.hp }}
-                            <script type="text/javascript">
-                                   if (document.getElementsByName('hp')[0].value != '') {
-                                          document.getElementsByName('label_hp')[0].setAttribute('class', 'active');
-                                   }
-                            </script>
-                            {% if form.hp.errors %}
-                            <script type="text/javascript">
-                                document.getElementsByName('hp')[0].setAttribute('class',
-                                    'form-control is-invalid')
-                            </script>
-                            {% for error in form.hp.errors %}
-                            <div class="invalid-feedback">
-                                {{ error }}
-                            </div>
-                            {% endfor %}
-                            {% endif %}
-                            <small class="form-text text-muted">
-                                Only numbers without any hyphen(-)
-                            </small>
-                        </div>
+                        <br>
 
                         <br>
-                        <button type="submit" style="opacity: 90%; font-size: 16px; margin-top: -5px;"
+                        <button type="submit" style="opacity: 90%; font-size: 16px; margin-top: -5px; margin-bottom: 20px;"
                                 class="btn btn-red btn-md btn-block">Sign Up</button>
 
                     </div>
-
-
                 </form>
             </div>
-            <div class="col-sm-2"></div>
+            <div class="col-sm-4"></div>
         </div>
     </div>
 
