--- a/templates/notice/notice_list.html
+++ b/templates/notice/notice_list.html
@@ -105,7 +105,7 @@
                 </table>
 
                 <!-- 글쓰기 버튼 -->
-                {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' %}
+                {% if user.is_authenticated %}
                     <a href="write/" class="btn btn-secondary">Write</a>
                 {% endif %}
 
