--- a/templates/tabs/ip_write.html
+++ b/templates/tabs/ip_write.html
@@ -54,11 +54,39 @@
         <!-- 글을 수정할 때와 작성할 때의 차이를 둠 -->
         <div class="text-right">
             {% if edit %} <!-- edit를 찾았을 때 존재하면, -->
-            <button type="submit" class="btn btn-sm btn-secondary"><b>{{ edit }}</b></button>
+            <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete_modal">delete</button>
+            <button type="submit" class="btn btn-success">{{ edit }}</button>
             {% else %}
             <button type="submit" id="write" class="btn btn-md btn-secondary">save</button>
             {% endif %}
         </div>
+
+        <!-- 삭제 버튼 클릭시, 팝업되는 modal창 -->
+        <div id="delete_modal" class="modal fade" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Deletion Warning</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <p>Are you sure to delete it?</p>
+                    </div>
+                    <div class="modal-footer">
+                        <button onclick="delete_modal()" type="button" class="btn btn-dark">Delete</button>
+                        <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <script type="text/javascript">
+            function delete_modal() {
+                location.replace('/tabs/ip/{{ IP.id }}/delete/');
+            }
+        </script>
 
     </form>
 </body>
