--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -65,17 +65,16 @@
                 <br><br>
 
                 <div class="save">
+                    <!-- remember session을 통해 로그인 유지 -->
                     <input type="checkbox" name="remember_session" id="login_holding"/>
                     <label for="login_holding">Keep me Logged in</label>
                     <input type="checkbox" id="idsave">
                     <label for="idsave">save ID</label>
-                    <input type="checkbox" id="pwsave">
-                    <label for="pwsave">save PW</label>
                 </div>
 
                 <div class="restore">
                     <span class="text">Forgot your ID or PW?</span>
-                    <a href="#">Restore ID/PW</a>
+                    <a href="choose_one">Recover ID/PW</a>
                 </div>
 
                 <div class="btnwrap">
