--- a/templates/notice/notice_write.html
+++ b/templates/notice/notice_write.html
@@ -23,6 +23,7 @@
 <body>
 
     <br><br>
+    <p style="font-size:38px; text-align:center; font-weight:bold">Notice Writing</p><br>
 
     <form class="container" method="POST">
         {% csrf_token %}
