--- a/templates/ppr/research_write.html
+++ b/templates/ppr/research_write.html
@@ -50,6 +50,8 @@
                 {{ form.title }}
             </div><br>
 
+            <p style="color:#BDBDBD">* If you don't use "Image" & "Title", then "Content" will be located in the center.</p><br>
+
             <label>Content: </label>
             <div>
                 {{ form.content }}
