--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 
     <meta charset='utf-8'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel = "stylesheet" href="{% static 'css/base.css' %}?ver=2.5">
+    <link rel = "stylesheet" href="{% static 'css/base.css' %}?ver=2.6">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
@@ -82,8 +82,15 @@
                     <li class="nav-item">
                         <a class="nav-link"  href="/notice">Notice</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link" href="/ppr/gallery">Gallery</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/gallery">Gallery</a>
+                    </li>
+                    <li class="nav-item">
+                        {% if user.is_authenticated %}
+                        <a class="nav-link" href="{% url 'main:logout' %}?next={{ request.path }}" style="color:white;"> Logout</a>
+                        {% else %}
+                        <a class="nav-link" href="{% url 'main:login' %}?next={{ request.path }}" style="color:white;"> Login</a>
+                        {% endif %}
                     </li>
                 </ul>
             </div>
@@ -112,9 +119,9 @@
 
                 {% if request.user.level == '0' or request.user.level == '1' %}
                     {% if request.user.activate == False %}
-                    <a href="{% url 'main:activate' %}" style="color:white;"><b> Activate</b></a>
+                    <a href="{% url 'main:activate_sign_up' %}" style="color:white;"><b> Activate</b></a>
                     {% else %}
-                    <a href="{% url 'main:activate' %}" style="color:white;"><b> Deactivate</b></a>
+                    <a href="{% url 'main:activate_sign_up' %}" style="color:white;"><b> Deactivate</b></a>
                     {% endif %}
                 {% endif %}
                 <br>
