--- a/templates/people/members.html
+++ b/templates/people/members.html
@@ -22,27 +22,30 @@
         <a class="panel-name"><b>Graduate Course</b></a><br>
     </div>
 
-    {% if people_all %}
-    {% for people in people_all %}
+    {% if graduate_all %}
+    {% for graduate in graduate_all %}
     <div style="background-color: white; padding-top:20px;" class="member container-fluid">
         <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-2">
-                {% if people.img_upload %}
-                <img src="{{ people.img_upload.url }}" width="170px;" style="border-radius: 7px;">
+                {% if graduate.img_upload %}
+                <img src="{{ graduate.img_upload.url }}" width="170px;" style="border-radius: 7px;">
                 {% endif %}
             </div>
             <div class="col-lg-8">
-                <a style=" font-size: 25px;"><b>{{ people.name }}</b></a><br>
+                <a style=" font-size: 25px;"><b>{{ graduate.name }}</b></a><br>
                 <a style="font-size: 15px;">
-                    E-mail: {{ people.email }}<br><br>
-                    {{ people.content }}<br><br>
+                    E-mail: {{ graduate.email }}<br><br>
+                    {{ graduate.content }}<br><br>
                 </a>
 
                 <!-- 수정, 삭제 버튼 -->
                 <div class="modifyButton" style="text-align: right;">
-                    {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' and request.user.username == people.name or request.user.level == '2' and request.user.userid == people.name %}
-                        <a href="modify/{{ people.id }}/" class="btn btn-success">Modify</a>
+                    {% if request.user.level == '0' or request.user.level == '1' %}
+                        <a href="alumni/{{ graduate.id }}/" class="btn btn-info">alumni</a>
+                    {% endif %}
+                    {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' and request.user.username == graduate.name or request.user.level == '2' and request.user.userid == graduate.name %}
+                        <a href="modify/{{ graduate.id }}/" class="btn btn-success">Modify</a>
                         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete_modal">delete</button>
                     {% endif %}
                 </div>
@@ -72,7 +75,7 @@
 
     <script type="text/javascript">
         function delete_modal() {
-            location.replace('delete/{{ people.id }}/');
+            location.replace('delete/{{ graduate.id }}/');
         }
     </script>
     {% endfor %}
@@ -91,27 +94,27 @@
 
     <!-- Ungraduate Area -->
 
-    {% if staff_all %}
-    {% for staff in staff_all %}
+    {% if undergraduate_all %}
+    {% for undergraduate in undergraduate_all %}
     <div style="background-color: white; padding-top:20px;" class="member container-fluid">
         <div class="row">
             <div class="col-lg-2"></div>
             <div class="col-lg-2">
-                {% if staff.img_upload %}
-                <img src="{{ staff.img_upload.url }}" width="170px;" style="border-radius: 7px;">
+                {% if undergraduate.img_upload %}
+                <img src="{{ undergraduate.img_upload.url }}" width="170px;" style="border-radius: 7px;">
                 {% endif %}
             </div>
             <div class="col-lg-8">
-                <a style=" font-size: 25px;"><b>{{ staff.name }}</b></a><br>
+                <a style=" font-size: 25px;"><b>{{ undergraduate.name }}</b></a><br>
                 <a style="font-size: 15px;">
-                    E-mail: {{ staff.email }}<br><br>
-                    {{ staff.content }}<br><br>
+                    E-mail: {{ undergraduate.email }}<br><br>
+                    {{ undergraduate.content }}<br><br>
                 </a>
 
                 <!-- 수정, 삭제 버튼 -->
                 <div class="modifyButton" style="text-align: right;">
-                    {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '3' and request.user.userid == staff.name or request.user.level == '3' and request.user.username == staff.name %}
-                        <a href="modify/staff/{{ staff.id }}/" class="btn btn-success">Modify</a>
+                    {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '3' and request.user.userid == undergraduate.name or request.user.level == '3' and request.user.username == undergraduate.name %}
+                        <a href="modify/staff/{{ undergraduate.id }}/" class="btn btn-success">Modify</a>
                         <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete_modal2">delete</button>
                     {% endif %}
                 </div>
@@ -141,7 +144,7 @@
 
     <script type="text/javascript">
         function delete_modal2() {
-            location.replace('delete/staff/{{ staff.id }}/');
+            location.replace('delete/staff/{{ undergraduate.id }}/');
         }
     </script>
     {% endfor %}
@@ -154,7 +157,75 @@
         {% endif %}
     </div>
 
+    <div class="panel container-fluid text-center">
+        <a class="panel-name"><b>Alumni</b></a><br>
+    </div>
 
+    {% if alumni_all %}
+    {% for alumni in alumni_all %}
+    <div style="background-color: white; padding-top:20px;" class="member container-fluid">
+        <div class="row">
+            <div class="col-lg-2"></div>
+            <div class="col-lg-2">
+                {% if alumni.img_upload %}
+                <img src="{{ alumni.img_upload.url }}" width="170px;" style="border-radius: 7px;">
+                {% endif %}
+            </div>
+            <div class="col-lg-8">
+                <a style=" font-size: 25px;"><b>{{ alumni.name }}</b></a><br>
+                <a style="font-size: 15px;">
+                    E-mail: {{ alumni.email }}<br><br>
+                    {{ alumni.content }}<br><br>
+                </a>
+
+                <!-- 수정, 삭제 버튼 -->
+                <div class="modifyButton" style="text-align: right;">
+                    {% if request.user.level == '0' or request.user.level == '1' %}
+                        <a href="alumni/{{ alumni.id }}/" class="btn btn-info">alumni</a>
+                    {% endif %}
+                    {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' and request.user.username == alumni.name or request.user.level == '2' and request.user.userid == alumni.name %}
+                        <a href="modify/{{ alumni.id }}/" class="btn btn-success">Modify</a>
+                        <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete_modal3">delete</button>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- 삭제 버튼 클릭시, 팝업되는 modal창 -->
+    <div id="delete_modal3" class="modal fade" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Deletion Warning</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p>Are you sure to delete it?</p>
+                </div>
+                <div class="modal-footer">
+                    <button onclick="delete_modal3()" type="button" class="btn btn-dark">Delete</button>
+                    <button type="button" class="btn btn-light" data-dismiss="modal">Cancel</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script type="text/javascript">
+        function delete_modal3() {
+            location.replace('delete/{{ alumni.id }}/');
+        }
+    </script>
+    {% endfor %}
+    {% endif %}
+
+    <!-- Add button -->
+    <div class="modifyButton" style="text-align: right;">
+        {% if request.user.level == '0' or request.user.level == '1' or request.user.level == '2' %}
+            <a href="/people/add_member" class="btn btn-primary" onclick="">Add</a>
+        {% endif %}
+    </div>
 
 {% endblock %}
 </body>
