--- a/templates/main/home.html
+++ b/templates/main/home.html
@@ -78,7 +78,7 @@
                         <!-- Carousel items -->
                         <div class="carousel-inner">
                             <div class="carousel-item active text-center" style="color:white">
-                                <i>/* Our New Journal */</i><br><br>
+                                <i>/* Our Newest Journal */</i><br><br>
                                 {% if journal %}
                                     TITLE: {{ journal.title }}<br>
                                     JOURNALS: {{ journal.journals }}<br>
@@ -89,7 +89,7 @@
                             <!--.item-->
 
                             <div class="carousel-item text-center" style="color:white">
-                                <i>/* Our New Publication */</i><br><br>
+                                <i>/* Our Newest Publication */</i><br><br>
                                 {% if publication %}
                                     TITLE: {{ publication.title }}<br>
                                     PUBLISHER: {{ publication.publisher }}<br>
@@ -100,7 +100,7 @@
                             <!--.item-->
 
                             <div class="carousel-item text-center" style="color:white">
-                                <i>/* Our New Notice */</i><br><br>
+                                <i>/* Our Newest Notice */</i><br><br>
                                 {% if notice %}
                                     TITLE: {{ notice.title }}<br>
                                     REGISTERED DATE: {{ content.registered_date }}<br>
