--- a/static/css/login.css
+++ b/static/css/login.css
@@ -110,7 +110,7 @@
 .btnwrap a{
     width: 130px;
     height: 38px;
-    background-color: #01BFBA;
+    background-color: #1F50B5;
     text-decoration: none;
     display: inline-block;
     border-radius: 3px;
